config/dependencies/istio/egress-gateway/destination-rule.yaml
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: httpbin-external
spec:
  host: httpbin.org
  trafficPolicy:
    tls:
      mode: SIMPLE
      sni: httpbin.org
