config/dependencies/istio/egress-gateway/service-entry.yaml
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: httpbin-external
spec:
  hosts:
    - httpbin.org
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
